--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -585,24 +585,24 @@
 
 	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
 	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
-	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
 	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
+	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
 	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
 	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
-	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
 	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
+	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
 	"mmorpg.currency.level_up_orb": "Orb of Infinity",
 	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
-	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
 	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
+	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
 	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
 	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
-	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
 	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
-	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
+	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
 	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
-	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
+	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
 	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
+	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
 	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
 	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
 	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
@@ -611,18 +611,18 @@
 	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
 	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
 	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
 	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
 	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
 	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
-	"mmorpg.currency.socket_adder": "Orb of Digging",
 	"item.mmorpg.currency.socket_adder": "Orb of Digging",
-	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
+	"mmorpg.currency.socket_adder": "Orb of Digging",
 	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
+	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
 
 "_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
 
@@ -854,7 +854,9 @@
 	"mmorpg.stat.bleed_resistance": "Bleed Resistance",
 	"mmorpg.stat.bleed_strength": "Bleed Strength",
 	"mmorpg.stat.block_chance": "Block Chance",
+	"mmorpg.stat.block_leech_cap": "Total Block Leech Per Second",
 	"mmorpg.stat.blood": "Blood",
+	"mmorpg.stat.blood_leech_cap": "Total Blood Leech Per Second",
 	"mmorpg.stat.blood_per_10_strength": "§a[VAL1] §4❤ Blood§7 per 10 §b❁ Strength§7",
 	"mmorpg.stat.blood_user": "§7You now use §4❤ Blood§7 instead of §9☯ Mana§7",
 	"mmorpg.stat.bonus_exp": "Bonus Experience",
@@ -906,7 +908,7 @@
 	"mmorpg.stat.defensive_eff_duration": "§7§a[VAL1]§7% to duration of Defensive effects on you.",
 	"mmorpg.stat.dex_dmg": "Ranged Damage",
 	"mmorpg.stat.dex_dmg_received": "Ranged Damage Received",
-	"mmorpg.stat.dexterity": "Dexterity",
+	"mmorpg.stat.dexterity": "dexterity",
 	"mmorpg.stat.dmg_received": "Damage Received",
 	"mmorpg.stat.dmg_taken_to_mana": "Damage Taken to Mana",
 	"mmorpg.stat.dmg_to_living": "Damage To Living",
@@ -945,6 +947,7 @@
 	"mmorpg.stat.enchanting_misc_drop_bonus": "Misc Drops",
 	"mmorpg.stat.enchanting_triple_drop": "Triple Drop Chance",
 	"mmorpg.stat.energy": "Energy",
+	"mmorpg.stat.energy_leech_cap": "Total Energy Leech Per Second",
 	"mmorpg.stat.energy_on_hit_hit": "Energy on Hit",
 	"mmorpg.stat.energy_per_sec": "Energy Per Regen",
 	"mmorpg.stat.energy_regen": "Energy Regen",
@@ -1000,6 +1003,7 @@
 	"mmorpg.stat.heal_over_time_eff_duration": "§7§a[VAL1]§7% to duration of Heal over Time effects on you.",
 	"mmorpg.stat.heal_spell_dmg": "Heal Damage",
 	"mmorpg.stat.health": "Health",
+	"mmorpg.stat.health_leech_cap": "Total Health Leech Per Second",
 	"mmorpg.stat.health_on_hit_hit": "Health on Hit",
 	"mmorpg.stat.health_on_kill": "Health on Kill",
 	"mmorpg.stat.health_per_10_dexterity": "§a[VAL1] §c❤ Health§7 per 10 §b❁ Dexterity§7",
@@ -1043,7 +1047,7 @@
 	"mmorpg.stat.increased_quantity": "Item Find",
 	"mmorpg.stat.int_dmg": "Spell Damage",
 	"mmorpg.stat.int_dmg_received": "Spell Damage Received",
-	"mmorpg.stat.intelligence": "intelligence",
+	"mmorpg.stat.intelligence": "Intelligence",
 	"mmorpg.stat.jewel_socket": "Jewel Sockets",
 	"mmorpg.stat.learn_arrow_barrage": "Learn Arrow Barrage",
 	"mmorpg.stat.learn_arrow_storm": "Learn Arrow Storm",
@@ -1123,7 +1127,6 @@
 	"mmorpg.stat.learn_vamp_blood": "Learn Vampiric Blood",
 	"mmorpg.stat.learn_whirlwind": "Learn Whirlwind",
 	"mmorpg.stat.learn_wish": "Learn Wish",
-	"mmorpg.stat.leech_per_sec": "Total Leech Per Second",
 	"mmorpg.stat.lifesteal": "Lifesteal",
 	"mmorpg.stat.lightning_any_wep_damage": "Lightning Weapon Damage",
 	"mmorpg.stat.lightning_dmg_when_target_low_hp": "§7Execute targets bellow 30% health, dealing §a[VAL1]§7% increased  §e☀ Lightning§7",
@@ -1139,11 +1142,13 @@
 	"mmorpg.stat.magic_find": "Magic Find",
 	"mmorpg.stat.magic_shield": "Magic Shield",
 	"mmorpg.stat.magic_shield_heal": "Magic Shield Healing",
+	"mmorpg.stat.magic_shield_leech_cap": "Total Magic Shield Leech Per Second",
 	"mmorpg.stat.magic_shield_on_hit_hit": "Magic Shield on Hit",
 	"mmorpg.stat.magic_shield_per_sec": "Magic Shield Per Regen",
 	"mmorpg.stat.magic_shield_regen": "Magic Shield Regen",
 	"mmorpg.stat.mana": "Mana",
 	"mmorpg.stat.mana_cost": "Mana Cost",
+	"mmorpg.stat.mana_leech_cap": "Total Mana Leech Per Second",
 	"mmorpg.stat.mana_on_hit_hit": "Mana on Hit",
 	"mmorpg.stat.mana_on_kill": "Mana on Kill",
 	"mmorpg.stat.mana_per_10_intelligence": "§a[VAL1] §9☯ Mana§7 per 10 §b❁ Intelligence§7",
@@ -1615,7 +1620,6 @@
 	"mmorpg.stat_desc.int_dmg_received": "Magic damage are mage spells, like fireball.",
 	"mmorpg.stat_desc.intelligence": "Determines your total: Mana, Mana Regen, Magic Shield",
 	"mmorpg.stat_desc.jewel_socket": "Allows you to socket more jewels",
-	"mmorpg.stat_desc.leech_per_sec": "Your leech/resource on hits are capped to x% per second, this stat increases that.",
 	"mmorpg.stat_desc.lifesteal": "Restore % of damage as health.",
 	"mmorpg.stat_desc.lightning_dmg_when_target_low_hp": "Low hp is 30% or less.",
 	"mmorpg.stat_desc.lightning_dot_damage": "Fire damage over time increases damage of burn, for example.",
